tests/ui/lint/snapshots/redundant_slice_bounds_upper.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Redundant slice bounds
   ╭─[test.lis:5:13]
 4 │   let a = 2
 5 │   let _ = xs[a..xs.length()]
   ·             ────────┬───────
   ·                     ╰── can be simpler
 6 │ }
   ╰────
  help: Simplify to `xs[a..]` · code: [lint.redundant_slice_bounds]
