tests/ui/lint/snapshots/redundant_sprintf.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `Sprintf`
   ╭─[test.lis:6:11]
 5 │   let s = "hello"
 6 │   let _ = fmt.Sprintf("%s", s)
   ·           ──────────┬─────────
   ·                     ╰── returns its argument unchanged
 7 │ }
   ╰────
  help: `fmt.Sprintf("%s", s)` formats a string as itself. Use `s` directly · code: [lint.redundant_sprintf]
