tests/ui/lint/snapshots/redundant_trim_guard_aliased_import.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `mystr.HasPrefix` guard
   ╭─[test.lis:6:3]
 5 │       let mut out = "www.example.com"
 6 │ ╭─▶   if mystr.HasPrefix((out), ("www.")) {
 7 │ │       out = mystr.TrimPrefix(out, "www.")
 8 │ ├─▶   }
   · ╰──── can be simpler
 9 │       let _ = out
   ╰────
  help: `mystr.TrimPrefix` already returns the string unchanged when the prefix is absent. Replace the `if` with `out = mystr.TrimPrefix(out, "www.")` · code: [lint.redundant_trim_guard]
