tests/ui/lint/snapshots/redundant_trim_guard_suffix.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `strings.HasSuffix` guard
   ╭─[test.lis:6:3]
 5 │       let mut out = "example.com/"
 6 │ ╭─▶   if strings.HasSuffix(out, "/") {
 7 │ │       out = strings.TrimSuffix(out, "/")
 8 │ ├─▶   }
   · ╰──── can be simpler
 9 │       let _ = out
   ╰────
  help: `strings.TrimSuffix` already returns the string unchanged when the suffix is absent. Replace the `if` with `out = strings.TrimSuffix(out, "/")` · code: [lint.redundant_trim_guard]
