tests/ui/lint/snapshots/regexp_in_loop_nested_in_if.snap
---
source: tests/ui/lint/mod.rs
---
  ● Regexp recompiled on every iteration
   ╭─[test.lis:7:34]
 6 │     if s != "" {
 7 │       let _ = regexp.MatchString("a", s)
   ·                                  ─┬─
   ·                                   ╰── recompiled
 8 │     }
   ╰────
  help: Compile the pattern once outside the loop and reuse it: `regexp.MustCompile`, or `regexp.Compile` to keep the error · code: [lint.regexp_in_loop]
